--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aayush Mishra"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD Candidate in Computer Science at Johns Hopkins University"
   location         : "Baltimore, MD (USA)"
   employer         :
