--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aayush Mishra"
-  avatar           : "profile.jpg"
+  avatar           : "files/profile.jpg"
   bio              : "PhD Candidate in Computer Science at Johns Hopkins University"
   location         : "Baltimore, MD (USA)"
   employer         :
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         : "aamish107"
   foursquare       :
-  github           : "aayushm107"
+  github           : "aamish107"
   google_plus      :
   keybase          :
   instagram        : "aamish107"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "aamish7"
+  linkedin         : "aamish107"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
