--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Aayush Mishra"
   avatar           : "profile.jpg"
-  bio              : "PhD Candidate in Computer Science at Johns Hopkins University"
+  bio              : "PhD Student in Computer Science at Johns Hopkins University"
   location         : "Baltimore, MD (USA)"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "UCf4nFTmmy-e06ClIfassRig"
+  youtube          : "@aamixsh"
   wikipedia        :
 
 
